update ts-sdk to newest version

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "local-aptid": "NODE_ENV=local ts-node cmd/apt_id_scripts.ts",
     "devnet-aptid": "NODE_ENV=devnet ts-node cmd/apt_id_scripts.ts",
-    "example": "ts-node cmd/register_names_set_reverse_and_list.ts"
+    "example": "NODE_ENV=devnet ts-node cmd/register_names_set_reverse_and_list.ts"
   },
   "keywords": [],
   "author": "",
