--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "aptid-ts",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
     "local-aptid": "NODE_ENV=local ts-node cmd/apt_id_scripts.ts",
     "devnet-aptid": "NODE_ENV=devnet ts-node cmd/apt_id_scripts.ts",
-    "example": "NODE_ENV=devnet ts-node cmd/register_names_set_reverse_and_list.ts"
+    "example": "NODE_ENV=devnet ts-node cmd/register_names_set_reverse_and_list.ts",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aptid/aptid-client-ts.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Apt ID",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/aptid/aptid-client-ts/issues"
+  },
+  "homepage": "https://github.com/aptid/aptid-client-ts/blob/main/README.md",
   "dependencies": {
     "@ethersproject/bytes": "^5.7.0",
     "aptos": "^1.3.13",
@@ -20,8 +31,11 @@
   "devDependencies": {
     "@types/node": "^18.6.2",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "4.8.2"
   }
 }
