--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "noImplicitAny": true,
-    "outDir": "./dist",
+    "outDir": "./lib",
     "sourceMap": true,
-    "target": "es2020",
+    "target": "es6",
     "pretty": true
   },
   "include": [
     "src",
-    "*.ts"
   ],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
