--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "devnet-aptid": "NODE_ENV=devnet ts-node cmd/apt_id_scripts.ts",
     "example": "NODE_ENV=devnet ts-node cmd/register_names_set_reverse_and_list.ts",
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\""
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "eslint . --ext .ts",
+    "lint-fix": "eslint . --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
