add testnet branch

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "local-aptid": "NODE_ENV=local ts-node cmd/apt_id_scripts.ts",
     "devnet-aptid": "NODE_ENV=devnet ts-node cmd/apt_id_scripts.ts",
+    "testnet-aptid": "NODE_ENV=testnet ts-node cmd/apt_id_scripts.ts",
     "example": "NODE_ENV=devnet ts-node cmd/register_names_set_reverse_and_list.ts",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" ",
